--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,6 @@ Navbar
 	margin-top: 16px;
 }
 
-a {
-	color: white !important;
-}
-
 
 /*=========================
 Headlines
@@ -66,7 +62,7 @@ h2 {
 }
 
 /*=========================
-content area
+MAIN CONTENT
 =========================*/
 
 ul#list {
@@ -95,7 +91,7 @@ ul#list li {
 }
 
 /*=========================
-below the fold
+BELOW THE FOLD
 =========================*/
 
 .container#belowFold {
@@ -135,4 +131,15 @@ p.center {
 	-moz-box-shadow:    0px 2px 4px 0 rgba(0,0,0,0.50);
 	-webkit-box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.50);
 	box-shadow:         0px 2px 4px 0 rgba(0,0,0,0.50);
+}
+
+.center a {
+	color: white !important;
+	text-shadow: none;
+}
+
+.btn-custom:hover {
+	color: #ffffff;
+  	background-color: #bd362f;
+  	*background-color: #a9302a;
 }
