--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,6 @@ Navbar
 	margin-top: 16px;
 }
 
-a {
-	color: white !important;
-}
-
 
 /*=========================
 Headlines
@@ -121,6 +117,11 @@ p.center {
 	text-align: center;
 }
 
+.center a {
+	color: white !important;
+	text-shadow: none;
+}
+
 .btn-custom {
 	border-radius: 8px;
 
@@ -135,4 +136,10 @@ p.center {
 	-moz-box-shadow:    0px 2px 4px 0 rgba(0,0,0,0.50);
 	-webkit-box-shadow: 0px 2px 4px 0 rgba(0,0,0,0.50);
 	box-shadow:         0px 2px 4px 0 rgba(0,0,0,0.50);
+}
+
+.btn-custom:hover {
+	color: #ffffff;
+  	background-color: #bd362f;
+  	*background-color: #a9302a;
 }
